--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>F8 project 01</title>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <!-- RESET CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css">
     <!-- GG FONT -->
@@ -17,45 +35,44 @@
 </head>
 
 <body>
+    <header class="fixed-header">
+        <div class="nav">
+            <div class="content">
+                <!-- Navbar -->
+                <nav class="navbar">
+                    <!-- Logo -->
+                    <a href="#"> <img src="./assets/img/logo.svg" alt="Besnik."></a>
+                    <!-- Navigation -->
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#resources">Resources</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                    <!-- Action -->
+                    <div class="actions">
+                        <a href="#!" class="action-link">Sign in</a>
+                        <a href="#!" class="btn action-btn">Sign up</a>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+
     <!-- thẻ main ngữ nghĩa chứa toàn bộ bố cục trang -->
     <main>
-        <header class="fixed-header">
-            <div class="nav">
-                <div class="content">
-                    <!-- Navbar -->
-                    <nav class="navbar">
-                        <!-- Logo -->
-                       <a href="/"> <img src="./assets/img/logo.svg" alt="Besnik."></a>
-                        <!-- Navigation -->
-                        <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
-                        </ul>
-                        <!-- Action -->
-                        <div class="actions">
-                            <a href="#!" class="action-link">Sign in</a>
-                            <a href="#!" class="btn action-btn">Sign up</a>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-        </header>
-                <!-- Hero -->
+        <!-- Hero -->
         <div class="hero-wrap">
             <div class="content">
-                <div class="hero">
-                    <div class="info">
-                        <p class="sub-title">Welcome to Besnik Agency</p>
-                        <h1 class="title">Discover a place
-                            you'll love to live.</h1>
-                        <p class="desc">Get the best real estate deals first,
-                            before they hit the mass market! HOT FORECLOSURE DEALS with one simple search.</p>
-                        <!-- call to action -->
-                        <a href="#!" class="btn hero-cta">More About Us</a>
-                    </div>
+                <div class="info">
+                    <p class="sub-title">Welcome to Besnik Agency</p>
+                    <h1 class="title">Discover a place
+                        you'll love to live.</h1>
+                    <p class="desc">Get the best real estate deals first,
+                        before they hit the mass market! HOT FORECLOSURE DEALS with one simple search.</p>
+                    <!-- call to action -->
+                    <a href="#!" class="btn hero-cta">More About Us</a>
                 </div>
                 <!-- Hero img -->
                 <img src="./assets/img/hero-img.svg" alt="Discover a place you'll love to live." class="hero-img">
@@ -105,7 +122,7 @@
         </div>
 
         <!-- Guides -->
-        <div class="guides">
+        <div id="services" class="guides">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
@@ -147,7 +164,7 @@
         </div>
 
         <!-- Featured -->
-        <div class="featured">
+        <div class="featured" id="features">
             <div class="content">
                 <!-- Header featured -->
                 <header>
@@ -230,7 +247,7 @@
         </div>
 
         <!-- Stats -->
-        <div class="stats">
+        <div id="resources" class="stats">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -318,85 +335,87 @@
                 </div>
             </div>
         </div>
-        <!-- Footer -->
-        <footer class="footer">
-            <div class="content">
-                <div class="row row-top">
-                    <!-- column -->
-                    <div class="column">
-                        <h3 class="heading">Product</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="#!">Listing</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Property</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Agents</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Blog</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3 class="heading">Resources</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="#!">Our Homes</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Member Stories</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Video</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Free trial</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3 class="heading">Company</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="#!">Patnerships</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Terms of use</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Privacy</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Sitemap</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column">
-                        <h3 class="heading">Get in touch</h3>
-                        <p class="desc">You’ll find your next home, in any style you prefer.</p>
-                        <div class="social">
-                            <a href="#!" class="social-link">
-                                <img src="./assets/img/facebook.svg" alt="">
-                            </a>
-                            <a href="#!" class="social-link">
-                                <img src="./assets/img/twitter.svg" alt="">
-                            </a>
-                            <a href="#!" class="social-link">
-                                <img src="./assets/img/linkedin.svg" alt="">
-                            </a>
-                        </div>
-                    </div>
+    </main>
+
+    <!-- Footer -->
+    <footer id="contact" class="footer">
+        <div class="content">
+            <div class="row row-top">
+                <!-- column -->
+                <div class="column">
+                    <h3 class="heading">Product</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="#!">Listing</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Property</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Agents</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Blog</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="row row-bottom">
-                    <img src="./assets/img/logo.svg" alt="besnik." class="logo">
-                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                <div class="column">
+                    <h3 class="heading">Resources</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="#!">Our Homes</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Member Stories</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Video</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Free trial</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3 class="heading">Company</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="#!">Patnerships</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Terms of use</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Privacy</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Sitemap</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3 class="heading">Get in touch</h3>
+                    <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                    <div class="social">
+                        <a href="#!" class="social-link">
+                            <img src="./assets/img/facebook.svg" alt="">
+                        </a>
+                        <a href="#!" class="social-link">
+                            <img src="./assets/img/twitter.svg" alt="">
+                        </a>
+                        <a href="#!" class="social-link">
+                            <img src="./assets/img/linkedin.svg" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
-        </footer>
-    </main>
+            <div class="row row-bottom">
+                <img src="./assets/img/logo.svg" alt="besnik." class="logo">
+                <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
